--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "authors": [
         {
             "name": "Romaric OUANGNI",
-            "email": "votre@email.com",
+            "email": "wangny.ouangni@gmail.com",
             "homepage": "https://votre-site.com"
         }
     ],
